; ModuleID = '/home/carl/AnghaBench/meltdown/libkdump/extr_libkdump.c_check_tsx.c'
source_filename = "/home/carl/AnghaBench/meltdown/libkdump/extr_libkdump.c_check_tsx.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @check_tsx to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @check_tsx() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = call i32 @__get_cpuid_max(i32 0, i32* null)
  %7 = icmp sge i32 %6, 7
  br i1 %7, label %8, label %19

8:                                                ; preds = %0
  %9 = load i32, i32* %2, align 4
  %10 = load i32, i32* %3, align 4
  %11 = load i32, i32* %4, align 4
  %12 = load i32, i32* %5, align 4
  %13 = call i32 @__cpuid_count(i32 7, i32 0, i32 %9, i32 %10, i32 %11, i32 %12)
  %14 = load i32, i32* %3, align 4
  %15 = and i32 %14, 2048
  %16 = icmp ne i32 %15, 0
  %17 = zext i1 %16 to i64
  %18 = select i1 %16, i32 1, i32 0
  store i32 %18, i32* %1, align 4
  br label %20

19:                                               ; preds = %0
  store i32 0, i32* %1, align 4
  br label %20

20:                                               ; preds = %19, %8
  %21 = load i32, i32* %1, align 4
  ret i32 %21
}

declare dso_local i32 @__get_cpuid_max(i32, i32*) #1

declare dso_local i32 @__cpuid_count(i32, i32, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
